...


// MARK: - Event handling

extension HomeViewController {
    @IBAction func filterButtonTapped(_ sender: UIButton) {
        let alertController = UIAlertController(title: "Show words that include:", message: nil, preferredStyle: .alert)
        
        alertController.addTextField()
        alertController.addAction(UIAlertAction(title: "Cancel", style: .cancel))
        
        alertController.addAction(UIAlertAction(title: "OK", style: .default) { [weak self, weak alertController] _ in
            if
                let text = alertController?.textFields?.first?.text,
                !text.isEmpty
            {
                self?.playData.applyCustomFilter({ $0.lowercased().contains(text) })
            } else {
...
