...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Y6G-aC-2EF" id="iJR-Bt-yMF"/>
                            <outlet property="delegate" destination="Y6G-aC-2EF" id="0sN-v9-vdj"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="📜 Shakespeare Word Count" id="Nme-Fq-hmC">
                        <barButtonItem key="rightBarButtonItem" title="🎯 Filter" id="pgO-Dm-xcA">
                            <connections>
                                <action selector="filterButtonTapped:" destination="Y6G-aC-2EF" id="FAH-P7-N4i"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
...
